# Explorations

./: README.md  test.sh
AgentMemory/: README.md  pyproject.toml
AgentMemory/scripts/: basic_usage.py
ClothSegmenter/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
ClothSegmenter/service/: main.py
ClothSegmenter/service/commons/: auth.py  environment.py  logger.py
ClothSegmenter/service/endpoints/v1/: cloth.py
ClothSegmenter/service/inference/: process.py
ClothSegmenter/service/routers/: __init__.py
ClothSegmenter/service/routers/v1/: __init__.py  router.py
ClothSegmenter/streamlit/: streamlit.py
ClothSegmenter/tests/resources/: __init__.py
ClothSegmenter/tests/units/: __init__.py
KVCache/: Makefile  README.md  main.py  pyproject.toml
RAGs/: .gitignore  README.md  helper_functions.py
RAGs/Notebooks/: FusionRetrieval.ipynb  GraphRag.ipynb  HyDe.ipynb  HyPE.ipynb  OptimalChunkSize.ipynb  PropositionChunking.ipynb
RAGs/evaluation/: evalute_rag.py
